--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
       "start": "node app.js"
     },
     "dependencies": {
+      "ejs": "^3.1.5",
       "express": "^4.17.1",
       "mongoose": "^5.12.12"
     }
