--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "compile:sass": "node-sass public/sass/index.scss public/stylesheets/style.css -w"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
