--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "compile:sass": "node-sass public/sass/index.scss public/stylesheets/style.css -w"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "node-sass": "^6.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.7"
   }
 }
