--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,9 @@
     "compile:sass": "node-sass public/sass/index.scss public/stylesheets/style.css -w"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -23,7 +25,6 @@
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local": "^1.0.0"
   }
 }
